--- a/UpFood/.prettierrc.json
+++ b/UpFood/.prettierrc.json
@@ -4,5 +4,6 @@
     "useTabs": true,
     "semi": true,
     "singleQuote": true,
-    "trailingComma": "all"
+    "trailingComma": "all",
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
