--- a/UpFood/.prettierrc.json
+++ b/UpFood/.prettierrc.json
@@ -1,9 +1,12 @@
 {
-    "printWidth": 90,
+    "printWidth": 80,
     "tabWidth": 4,
     "useTabs": true,
     "semi": true,
     "singleQuote": true,
+    "jsxSingleQuote": false,
     "trailingComma": "all",
+    "arrowParens": "avoid",
+    "endOfLine": "lf",
     "plugins": ["prettier-plugin-tailwindcss"]
 }
